A little fix to disable margin collapse.

--- a/src/star-impression/star-impression.styl
+++ b/src/star-impression/star-impression.styl
@@ -38,6 +38,7 @@
 .star-impression
   text-align center
   font-family 'ALSSans', Helvetica
+  padding-top 1px
 
   position relative
   .canvas-container
